--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,15 +1,15 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  username: MyString
-  email: MyString
+  username: hello
+  email: hello@gmail.com
   password_digest: MyString
   bio: MyText
   profile_picture_url: MyString
 
 two:
-  username: MyString
-  email: MyString
+  username: hello2
+  email: hello2@gmail.com
   password_digest: MyString
   bio: MyText
   profile_picture_url: MyString
